--- a/src/main/resources/templates/holidayDetails.html
+++ b/src/main/resources/templates/holidayDetails.html
@@ -9,12 +9,12 @@
 </head>
 <body>
 <h1 th:text="${holiday.name}">Plan Details</h1>
-<p>Total Amount: <span th:text="${holiday.totalAmount}">Total Amount</span></p>
+<p>Total Amount: £<span th:text="${holiday.totalAmount}">Total Amount</span></p>
 <p>Number of People: <span th:text="${holiday.numPeople}">Number of People</span></p>
 <h2>People:</h2>
 <ul>
     <li th:each="person : ${holiday.people}">
-        <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name}">Person Name</a> - To Pay: <span th:text="${person.toPay}">Amount</span>
+        <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name}">Person Name</a> - Remaining Balance: £<span th:text="${person.toPay}">Amount</span>
     </li>
 </ul>
 <a th:href="@{/payments/add(holidayId=${holiday.id})}">Add Payment</a><br>
