--- a/src/main/resources/templates/holidayDetails.html
+++ b/src/main/resources/templates/holidayDetails.html
@@ -14,13 +14,24 @@
 <h2>People:</h2>
 <ul>
     <li th:each="person : ${holiday.people}">
-        <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name}">Person Name</a> - Remaining Balance: £<span th:text="${person.toPay}">Amount</span>
+        <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name}">Person Name</a>
+        <p>- Remaining Balance: £<span th:text="${person.toPay}">Amount</span></p>
+
+            <ul>
+                <h3>Payments:</h3>
+            <li th:each="payment : ${person.payments}">
+                Amount: £<span th:text="${payment.amount}">Amount</span> - Date: <span th:text="${payment.paymentDate}">Date</span>
+            </li>
+                <br>
+            </ul>
     </li>
 </ul>
+
+
 <a th:href="@{/payments/add(holidayId=${holiday.id})}">Add Payment</a><br>
 <a th:href="@{/holidays}">Back to Holidays</a>
 
 
 
 </body>
-</html> 
+</html>
