--- a/src/main/resources/templates/holidayDetails.html
+++ b/src/main/resources/templates/holidayDetails.html
@@ -7,31 +7,58 @@
 <!--    <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
     <title>Holiday Details</title>
 </head>
+<!--<body>-->
+<!--<h1 th:text="${holiday.name}">Plan Details</h1>-->
+<!--<p>Total Amount: £<span th:text="${holiday.totalAmount}">Total Amount</span></p>-->
+<!--<p>Number of People: <span th:text="${holiday.numPeople}">Number of People</span></p>-->
+<!--<h2>People:</h2>-->
+<!--<ul>-->
+<!--    <li th:each="person : ${holiday.people}">-->
+<!--        <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name}">Person Name</a>-->
+<!--        <p>- Remaining Balance: £<span th:text="${person.toPay}">Amount</span></p>-->
+<!--        <p>- Total Paid: £<span th:text="${#numbers.formatDecimal(person.payments.stream().mapToDouble(p ->.amount.doubleValue()).sum(), 1, 2)}">Total Paid</span></p>-->
+<!--        <h3>Payments:</h3>-->
+<!--            <ul>-->
+
+<!--            <li th:each="payment : ${person.payments}">-->
+<!--                Amount: £<span th:text="${payment.amount}">Amount</span> - Date: <span th:text="${#dates.format(payment.paymentDate, 'dd-MM-yyyy')}">Date</span>-->
+<!--            </li>-->
+
+<!--            </ul><br>-->
+<!--    </li>-->
+<!--</ul>-->
+
+
+<!--<a th:href="@{/payments/add(holidayId=${holiday.id})}">Add Payment</a><br>-->
+<!--<a th:href="@{/holidays}">Back to Holidays</a>-->
+
+
+
+<!--</body>-->
 <body>
 <h1 th:text="${holiday.name}">Plan Details</h1>
 <p>Total Amount: £<span th:text="${holiday.totalAmount}">Total Amount</span></p>
 <p>Number of People: <span th:text="${holiday.numPeople}">Number of People</span></p>
+
 <h2>People:</h2>
 <ul>
-    <li th:each="person : ${holiday.people}">
-        <a th:href="@{/people/{id}(id=${person.id})}" th:text="${person.name}">Person Name</a>
-        <p>- Remaining Balance: £<span th:text="${person.toPay}">Amount</span></p>
+    <li th:each="personWithTotalPaid : ${peopleWithTotalPaid}">
+        <a th:href="@{/people/{id}(id=${personWithTotalPaid.person.id})}" th:text="${personWithTotalPaid.person.name}">Person Name</a>
+        <p>- Remaining Balance: £<span th:text="${personWithTotalPaid.person.toPay}">Amount</span></p>
+        <p>- Total Paid: £<span th:text="${personWithTotalPaid.totalPaid}">Total Paid</span></p>
 
-            <ul>
-                <h3>Payments:</h3>
-            <li th:each="payment : ${person.payments}">
-                Amount: £<span th:text="${payment.amount}">Amount</span> - Date: <span th:text="${payment.paymentDate}">Date</span>
+        <h3>Payments:</h3>
+        <ul>
+            <li th:each="payment : ${personWithTotalPaid.person.payments}">
+                Amount: £<span th:text="${payment.amount}">Amount</span> - Date: <span th:text="${#dates.format(payment.paymentDate, 'dd-MM-yyyy')}">Date</span>
             </li>
-                <br>
-            </ul>
+        </ul>
+        <br>
     </li>
 </ul>
 
-
 <a th:href="@{/payments/add(holidayId=${holiday.id})}">Add Payment</a><br>
 <a th:href="@{/holidays}">Back to Holidays</a>
-
-
 
 </body>
 </html>
