--- a/src/main/resources/templates/addPayment.html
+++ b/src/main/resources/templates/addPayment.html
@@ -11,7 +11,7 @@
         <option th:each="person : ${people}" th:value="${person.id}" th:text="${person.name}">Person Name</option>
     </select><br>
     <label for="amount">Amount:</label>
-    <input type="number" id="amount" name="amount" required><br>
+    <input type="number" id="amount" name="amount" step="0.01" required><br>
     <button type="submit">Add Payment</button>
 </form>
 </body>
